# half-birthday-calc

./: .gitignore  GEMINI.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
python/: README.md  pyproject.toml
python/half_birthday_calc/: __init__.py  calculator.py
python/tests/: test_calculator.py
src/: index.spec.ts  index.ts
