[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "half-birthday-calc"
version = "0.1.0"
description = "A robust library for calculating half birthdays."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
